@@ -1,25 +1,13 @@
-FROM gradle:8.11.1-jdk21 as builder
-RUN mkdir job4j_devops
-WORKDIR job4j_devops
-COPY . .
-RUN jar xf /job4j_devops/build/libs/DevOps-1.0.0.jar
-RUN jdeps --ignore-missing-deps -q  \
-    --recursive  \
-    --multi-release 21  \
-    --print-module-deps  \
-    --class-path 'BOOT-INF/lib/*'  \
-    /job4j_devops/build/libs/DevOps-1.0.0.jar > deps.info
-RUN jlink \
-    --add-modules $(cat deps.info) \
-    --strip-debug \
-    --compress 2 \
-    --no-header-files \
-    --no-man-pages \
-    --output /slim-jre
+FROM openjdk:21-jdk
 
-FROM debian:bookworm-slim
-ENV JAVA_HOME /user/java/jdk21
-ENV PATH $JAVA_HOME/bin:$PATH
-COPY --from=builder /slim-jre $JAVA_HOME
+# Set the working directory
+WORKDIR /job4j_devops
+
+# Copy the built JAR file from the builder stage
 COPY --from=builder /job4j_devops/build/libs/DevOps-1.0.0.jar .
-ENTRYPOINT java -jar DevOps-1.0.0.jar
+
+# Extract the JAR if needed
+RUN jar xf DevOps-1.0.0.jar
+
+# Command to run the application
+CMD ["java", "-jar", "DevOps-1.0.0.jar"]
